# axaiev

./: .gitignore  README.md  core.py  polygon_mesh.py  polygon_mesh0.py  polygon_mesh1.py  polygon_mesh2.py  polygon_mesh3.py  pyproject.toml  requirements.txt  segmentation.py  todo_notes.md  voronoi.py
src/axaiev/: __init__.py  cli.py  core.py  mask2poly.py  segmentation.py  voronoi.py
