[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "axaiev"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "version"]


[project.scripts]
# convert bgr to rgb
axaiev = "axaiev.cli:main"



# [project.package]
[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "axaiev.__version__"}

# this siginificantly speeds up pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
